--- a/src/client/MarketClient.form
+++ b/src/client/MarketClient.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
@@ -7,6 +7,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <Events>
     <EventHandler event="windowClosing" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="onClosingWindow"/>
@@ -45,7 +46,7 @@
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="wishItemLabel" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" max="-2" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="wishNameLabel" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="wishPriceLabel" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -85,7 +86,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="itemsSoldLabel" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                                  <Component id="sold" pref="123" max="32767" attributes="0"/>
+                                  <Component id="sold" max="32767" attributes="0"/>
                               </Group>
                               <Component id="sellButton" linkSize="2" min="-2" max="-2" attributes="0"/>
                           </Group>
